--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,9 @@
       "program": "${file}",
       "console": "integratedTerminal",
       "justMyCode": false,
-      "python": "/home/urig/liel/reliability_in_ML/B-CUQ/bcuq/bin/python"
+      // "python": "/home/urig/liel/reliability_in_ML/B-CUQ/bcuq/bin/python"
+      "python": "/Users/lielbalila/Desktop/projects/ReliabilityInML/project/.venv/bin/python"
+
     }
   ]
 }
